--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,8 @@
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
 *,
 *::before,
 *::after {
@@ -12,7 +17,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #000;
+  background-color: #fff;
   width: 100vw;
   height: 100vh;
 }
