--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,11 +13,48 @@ html {
 }
 
 body {
+  background-color: lightslategray;
+  width: 100vw;
+  height: 100vh;
+}
+
+.game-container {
+  background-color: lightslategray;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #fff;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  .title-cont {
+    text-align: center;
+    width: 800px;
+    height: calc(((100% - 600px) / 2) / 2);
+    background-color: lightgray;
+  }
+  .game-cont {
+    width: 800px;
+    height: 600px;
+  }
+  .scoreboard-cont {
+    width: 800px;
+    height: calc((100% - 600px) / 1.33);
+    background-color: lightgray;
+  }
+}
+
+.scoreboard-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .score-box {
+    border: 1px solid gray;
+    background-color: ivory;
+    width: 25%;
+    height: 100%;
+    table {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
