--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -20,7 +20,7 @@ body {
 
 .game-container {
   background-color: lightslategray;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -56,5 +56,21 @@ body {
       width: 100%;
       height: 100%;
     }
+  }
+}
+
+.form-container {
+  background-color: lightgoldenrodyellow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  .form-b-1,
+  .form-b-2 {
+    width: 100%;
+    height: 50%;
+    border: 1px solid black;
   }
 }
