--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -53,8 +53,8 @@ body {
   }
 
   .game-cont {
-    width: 800px;
-    height: 600px;
+    max-width: 800px;
+    max-height: 600px;
   }
 
   .scoreboard-cont {
